# Arkiora

./: .gitignore  README.md  design.md  requirement.md
.claude/: settings.local.json
backend/: alembic.ini  main.py  pyproject.toml
backend/core/: config.py  database.py  exceptions.py  logging.py
backend/core/audit/: service.py
backend/core/auth/: router.py
backend/core/crud/: base_repository.py  query_builder.py
backend/core/jsonrpc/: dispatcher.py  router.py  schemas.py
backend/core/permissions/: record_rules.py  service.py
backend/core/registry/: method_registry.py  model_registry.py
backend/core/security/: jwt.py  password.py
backend/infrastructure/orm/: core_models.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/modules/asset_management/: __init__.py
backend/modules/asset_management/application/dtos/: asset_dto.py
backend/modules/asset_management/application/services/: asset_service.py  base_service.py
backend/modules/asset_management/domain/entities/: allocation.py  asset.py  asset_category.py
backend/modules/asset_management/domain/repositories/: i_repositories.py
backend/modules/asset_management/infrastructure/orm/: asset_model.py
backend/modules/asset_management/infrastructure/repositories/: asset_repository.py
backend/modules/asset_management/presentation/: metadata.py
backend/scripts/: e2e_demo.py  seed.py
backend/shared/: base_entity.py  base_orm_model.py  events.py  types.py
backend/tests/: smoke_test.py
frontend/: .reticle.json  next.config.ts  package-lock.json  package.json  (+1 more)
(+28 files in other folders)
